+added svg download and fixed overlapping

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -78,6 +78,7 @@ h1 {
     margin-left: 2.85%;
     top: 20px;
     width: 97%;
+    z-index: 1;
 }
 
 nav {
